src/components/css/About.css
@keyframes fade-in {
    0% {
      opacity: 0;
      transform: translateY(20px);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }
  
  @keyframes slide-in {
    0% {
      opacity: 0;
      transform: translateX(-20px);
    }
    100% {
      opacity: 1;
      transform: translateX(0);
    }
  }
  
  .owner-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    margin: 2rem auto;
    animation: fade-in 1s ease-out; 
  }
  
  .owner-name-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

  .owner-name {
    color: #a770ff;
    font-size: 2.5rem;
  }
  
  .owner-description {
    margin: 0 -2rem 0 -2rem;
    max-width: 1000px;
    font-size: 18px;
  }
  
  .owner-avatar {
    border-radius: 50%;
    margin-top: 1rem;
  }

  .owner-story-button {
    display: inline-block;
    padding: 12px 24px;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    border: none;
    border-radius: 8px;
    background-color: #a770ff;
    color: white;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin: 1rem;
    animation: slide-in 1s ease-out;
  }

  .owner-story-button:hover {
    background-color: #8948cc;
  }
  
  .owner-story-button:focus {
    outline: none;
    box-shadow: 0 0 0 2px #a770ff;
  }
  
  .owner-story-button:active {
    transform: translateY(2px);
  }

  .skills-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  
  
  @keyframes shadow-in {
    0% {
      box-shadow: none;
    }
    100% {
      box-shadow: 0 2px 8px rgba(226, 221, 221, 1);
    }
  }
  
  @keyframes fade-in-p1 {
    0% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }
  @keyframes fade-in-p2 {
    0% {
      opacity: 0;
    }

    50% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }
  @keyframes fade-in-p3 {
    0% {
      opacity: 0;
    }
    66% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }
  
  .skills-div {
    padding: 1rem 7rem;
    margin: 1rem;
    box-shadow: 0 2px 8px rgba(226, 221, 221, 1);
    background-color: rgba(145, 141, 141, 0.144);
    text-align: center;
    animation: fade-in-p1 0.5s ease-out, shadow-in 2s ease-out;
  }
  
  .skills-div p {
    margin-top: 1rem;
    font-size: 1rem;
    animation: fade-in-p3 1.5s ease-out;
  }
  
  .skills-div img {
    animation: fade-in-p2 1s ease-out;
  }

  .skills-div:hover {
    transform: scale(1.1);
    box-shadow: 0 2px 16px rgb(255, 255, 255);
  }
  

